修改makefile相关文件，看起来还有人需要继续使用他们

--- a/eb0/Makefile
+++ b/eb0/Makefile
@@ -4,7 +4,7 @@ EB_TOP=../
 # Target Specs 。
 # ----------------------------------------------------
 MODULES = erlbattle battlefield tools channel battleRecorder\
-			englandArmy feardFarmers\
+			example_army/englandArmy example_army/feardFarmers\
 			testAll testBattleFieldCreate testErlBattleTakeAction testErlBattleGetTime
 
 include ../make/target.mk 
