support for subdir make

--- a/eb0/Makefile
+++ b/eb0/Makefile
@@ -4,7 +4,8 @@ EB_TOP=../
 # Target Specs 。
 # ----------------------------------------------------
 MODULES = erlbattle battlefield tools channel battleRecorder\
-			example_army/englandArmy example_army/feardFarmers\
 			testAll testBattleFieldCreate testErlBattleTakeAction testErlBattleGetTime
+
+SUBDIR_CMD = cd example_army && $(MAKE) $@ && cd ..
 
 include ../make/target.mk 
