增加一个配置和编译的README文件

--- a/eb0/neoedmund/Makefile
+++ b/eb0/neoedmund/Makefile
@@ -3,6 +3,6 @@ EB_TOP=../../
 # ----------------------------------------------------
 # Target Specs 。
 # ----------------------------------------------------
-MODULES = englandArmy feardFarmers
+MODULES = neoe
 
 include ../../make/target.mk 
