先完成一个原地砍人的，哈哈。

--- a/army/Makefile
+++ b/army/Makefile
@@ -1,6 +1,6 @@
 EB_TOP=../
 
-SUBDIRS = example_army maddog neoedmund
+SUBDIRS = example_army maddog neoedmund karlcpp.random_army
 # evan.tao  hwh laofan 
 
 include ../make/target.mk 
