增加老范目录编译功能

--- a/army/Makefile
+++ b/army/Makefile
@@ -1,6 +1,6 @@
 EB_TOP=../
 
-SUBDIRS = example_army maddog neoedmund karlcpp.random_army
+SUBDIRS = example_army maddog neoedmund karlcpp.random_army laofan
 # evan.tao  hwh laofan 
 
 include ../make/target.mk 
