Makefile for hwh; move langxianzhe under army

--- a/army/Makefile
+++ b/army/Makefile
@@ -1,6 +1,6 @@
 EB_TOP=../
 
-SUBDIRS = example_army maddog neoedmund karlcpp.random_army laofan
-# evan.tao  hwh laofan 
+SUBDIRS = example_army maddog neoedmund karlcpp.random_army laofan hwh
+# evan.tao  
 
 include ../make/target.mk 
