去掉hwh的Makefile，这样linux下使用emake对此模块进行编译

--- a/army/Makefile
+++ b/army/Makefile
@@ -1,6 +1,7 @@
 EB_TOP=../
 
-SUBDIRS = example_army maddog neoedmund karlcpp.random_army laofan hwh
+SUBDIRS = example_army maddog neoedmund karlcpp.random_army laofan
+# hwh , i donot need the makefile, i use emake
 # evan.tao  
 
 include ../make/target.mk 
