完成了日志记录器的功能。 1. 使用日志记录器的模块，只要include("schema.hrl")就可以 2. testEbLogger.erl中有详细的接口使用说明。

--- a/core/engine/Makefile
+++ b/core/engine/Makefile
@@ -3,7 +3,7 @@ EB_TOP=../../
 # ----------------------------------------------------
 # Target Specs 。
 # ----------------------------------------------------
-MODULES = erlbattle battlefield tools channel battleRecorder\
-			testAll testBattleFieldCreate testErlBattleTakeAction testErlBattleGetTime
+MODULES = erlbattle battlefield tools channel battleRecorder ebLogger\
+			testAll testBattleFieldCreate testErlBattleTakeAction testErlBattleGetTime testEbLogger
 
 include ../../make/target.mk 
